# course_work_4

./: README.md  pyproject.toml
src/: CityList.py  DataOperations.py  JobParser.py  Operations.py  ParsOperations.py  config.json  dataoperations.py  job_operations.py  jobparser.py  main.py  parsoperations.py  user_interface.py  userinterface.py  vacancy.py
